fix overlapping issues style.css

--- a/style.css
+++ b/style.css
@@ -169,6 +169,17 @@ button:hover {
   border: 5px double;
 }
 
+#llamaFnbr {
+  position: fixed;
+  bottom: 4em;
+  left: 6em;
+  height: 18%;
+  animation-name: llamaDance2;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
 #llamaFree {
   transform: scaleX(-1);
   position: fixed;
@@ -181,15 +192,10 @@ height: 21%;
   animation-timing-function: ease-in-out;
 }
 
-#llamaFnbr {
-  position: fixed;
-  bottom: 4em;
-  left: 6em;
-  height: 18%;
-  animation-name: llamaDance2;
-  animation-duration: 6s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
+@keyframes llamaDance2 {
+  0%   {height: 18%; width: 10%;}
+  50% {height: 20%; width: 10%;}
+  100%   {height: 18%; width: 10%;}
 }
 
 @keyframes llamaDance1 {
@@ -198,12 +204,10 @@ height: 21%;
   100%   {height: 21%; width: 12%;}
 }
 
-@keyframes llamaDance2 {
-  0%   {height: 18%; width: 10%;}
-  50% {height: 20%; width: 10%;}
-  100%   {height: 18%; width: 10%;}
-}
-
 #daysTotal {
   cursor: pointer
+}
+
+marquee {
+  pointer-events: none;
 }
